# openpitch

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  server.json
.claude/skills/run-openpitch/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  correction.yml
.github/workflows/: ci.yml  daily.yml  release.yml
config/: discovered.yaml  metrics.yaml  podcasts.yaml  scoring.yaml  taxonomy.yaml  watchlist.yaml
data/: README.md  index.json  universe.json
data/cache/: seen.json
data/claims/: 1x.json  abridge.json  ai21.json  ai71.json  aidoc.json  aleph-alpha.json  alta-ares.json  ambience.json  anduril-industries.json  anduril.json  anthropic.json  anyscale.json  anysphere.json  applied-intuition.json  apptronik.json  arcade.json  at-bay.json  augment.json  auterion.json  ayar-labs.json  baseten.json  bayzat.json  black-forest-labs.json  bland.json  braintrust.json  captions.json  cartesia.json  cerebras.json  chroma.json  cognism.json  cognition.json  cohere.json  collate.json  cresta.json  crewai.json  crusoe.json  cyclica.json  cyera.json  databricks.json  dawnguard.json  (+113 more)
data/companies/: 1x.json  abridge.json  ai21.json  ai71.json  aidoc.json  aleph-alpha.json  alta-ares.json  ambience.json  anduril-industries.json  anduril.json  anthropic.json  anyscale.json  anysphere.json  applied-intuition.json  apptronik.json  arcade.json  at-bay.json  augment.json  auterion.json  ayar-labs.json  baseten.json  bayzat.json  black-forest-labs.json  bland.json  braintrust.json  captions.json  cartesia.json  cerebras.json  chroma.json  cognism.json  cognition.json  cohere.json  collate.json  cresta.json  crewai.json  crusoe.json  cyclica.json  cyera.json  databricks.json  dawnguard.json  (+120 more)
data/digest/: 2026-06-14.md  2026-06-15.md  2026-06-16.md  2026-06-17.md  2026-06-20.md  2026-06-22.md  2026-06-23.md  2026-06-24.md  2026-07-06.md  2026-07-07.md  2026-07-12.md
data/events/: 2026-06-14.jsonl  2026-06-16.jsonl  2026-06-17.jsonl  2026-06-20.jsonl  2026-06-22.jsonl  2026-06-23.jsonl  2026-06-24.jsonl  2026-07-06.jsonl  2026-07-12.jsonl  feed.jsonl
data/history/1x/: arr.jsonl  headcount.jsonl  open_roles.jsonl  revenue_multiple.jsonl  round_amount.jsonl  total_funding.jsonl  valuation.jsonl
data/history/abridge/: headcount.jsonl  total_funding.jsonl  valuation.jsonl
data/history/ai21/: arr.jsonl  revenue_multiple.jsonl  round_amount.jsonl  valuation.jsonl
data/history/ai71/: round_amount.jsonl
data/history/aidoc/: round_amount.jsonl
data/history/aleph-alpha/: round_amount.jsonl  total_funding.jsonl  valuation.jsonl
data/history/alta-ares/: latest_round.jsonl  total_funding.jsonl
data/history/ambience/: round_amount.jsonl  total_funding.jsonl
data/history/anduril/: round_amount.jsonl  valuation.jsonl
data/history/anduril-industries/: latest_round.jsonl  total_funding.jsonl  valuation.jsonl
data/history/anthropic/: arr.jsonl  open_roles.jsonl  revenue_multiple.jsonl  round_amount.jsonl  total_funding.jsonl  valuation.jsonl
data/history/anyscale/: arr.jsonl  revenue_multiple.jsonl  round_amount.jsonl  valuation.jsonl
data/history/anysphere/: arr.jsonl  mrr.jsonl  (+3 more)
data/quality/: report.md
data/seed/: claims.json
data/validation/: reference_top50.json
docs/: AI-FIRST-ASSESSMENT.md  BRD.md  COMPETITIVE-ANALYSIS.md  CORRECTIONS.md  DATA-POLICY.md  EVENTS-SPEC.md  FEATURE-SPEC-zero-friction-install.md  FRD.md  LAUNCH-GATES.md  MCP-SPEC.md  METHODOLOGY.md  OPERATIONS.md  OSS-DEEP-DIVE.md  OSS-LANDSCAPE.md  OpenPitch-PM-Workbook.xlsx  OpenPitch-Pitch-Deck.pptx  PRD.md  RECENT-CHANGES.md  STRATEGY-DEEP-DIVE.md  V0-SEED-DATASET.md  VALIDATION-TOP50.md  competitive-matrix.xlsx
packaging/openpitch-mcp/: README.md  pyproject.toml
schemas/: event.schema.json  resolved_value.schema.json
scripts/: build_competitive_matrix.py  build_pitch_deck.js  build_pm_workbook.py  validate_top50.py
src/openpitch/: __init__.py  config.py  models.py  paths.py  store.py
tests/: conftest.py  test_adapters.py  test_dashboard_build.py  test_derive.py  test_extract.py  test_extract_cache.py  test_pipeline.py  test_reconcile.py
(+455 files in other folders)
