# Alias package: `uvx openpitch-mcp` resolves package names, and the main package is
# `openpitch` — this thin wrapper makes the natural command work and gives the MCP
# Registry a package whose default executable IS the server.
[project]
name = "openpitch-mcp"
version = "0.1.2"
description = "The OpenPitch MCP server — open, sourced, confidence-scored intelligence on AI startups."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Mohamed Abdulhadi" }]
dependencies = ["openpitch>=0.1.1"]

[project.urls]
Homepage = "https://github.com/Avierovich/openpitch"
Repository = "https://github.com/Avierovich/openpitch"

[project.scripts]
openpitch-mcp = "openpitch.mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true
